# meta-api

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
.github/workflows/: create-upload.yaml  upload-containers.yaml
docker/: insert_app.nix
