[tool.poetry]
name = "meta-api"
version = "0.1.0"
description = ""
authors = ["mjoes <morten.slingsby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
